chore: deploy-ready (fix Stats, assets path, env)

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <link
       rel="preload"
       as="image"
-      href="/assets/test-background.png"
+      href="../assets/test-background.png"
       fetchpriority="high"
     />
 
