Fix: StartPage safe-area & styles.css update, index.html tweak, remove unused t-background.png

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <!-- iOS 안전영역 사용 -->
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1, viewport-fit=cover"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
 
     <!-- 시작/질문 배경 이미지 프리로드 -->
