Add Open Graph meta tags and OG image for KakaoTalk preview

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta property="og:title" content="피싱 유형 CVTI 테스트" />
+    <meta
+      property="og:description"
+      content="사기 1초 전! 당신은 어떤 유형에 취약할까요? CVTI 테스트로 확인해보세요."
+    />
+    <meta property="og:image" content="%PUBLIC_URL%/assets/og-image.png" />
+    <meta property="og:url" content="https://www.pol-cvti.co.kr" />
+    <meta property="og:type" content="website" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="피싱 유형 CVTI 테스트" />
+    <meta
+      name="twitter:description"
+      content="사기 1초 전! 당신은 어떤 유형에 취약할까요? CVTI 테스트로 확인해보세요."
+    />
+    <meta name="twitter:image" content="%PUBLIC_URL%/assets/og-image.png" />
+
     <!-- iOS 안전영역 사용 -->
     <meta
       name="viewport"
