chore: update tab title from 'React App' to 'CVTI 테스트'

--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,8 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
 
+    <title>CVTI 테스트</title>
+
     <!-- 시작/질문 배경 이미지 프리로드 -->
     <link
       rel="preload"
