feat: PVTI rollout — rename CVTI→PVTI across UI; remove Result PNG icon; update titles

--- a/public/index.html
+++ b/public/index.html
@@ -4,17 +4,17 @@
     <meta property="og:title" content="피싱 유형 CVTI 테스트" />
     <meta
       property="og:description"
-      content="사기 1초 전! 당신은 어떤 유형에 취약할까요? CVTI 테스트로 확인해보세요."
+      content="사기 1초 전! 당신은 어떤 유형에 취약할까요? PVTI 테스트로 확인해보세요."
     />
     <meta property="og:image" content="%PUBLIC_URL%/assets/og-image.png" />
     <meta property="og:url" content="https://www.pol-cvti.co.kr" />
     <meta property="og:type" content="website" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="피싱 유형 CVTI 테스트" />
+    <meta name="twitter:title" content="피싱 유형 PVTI 테스트" />
     <meta
       name="twitter:description"
-      content="사기 1초 전! 당신은 어떤 유형에 취약할까요? CVTI 테스트로 확인해보세요."
+      content="사기 1초 전! 당신은 어떤 유형에 취약할까요? PVTI 테스트로 확인해보세요."
     />
     <meta name="twitter:image" content="%PUBLIC_URL%/assets/og-image.png" />
 
@@ -24,7 +24,7 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
 
-    <title>CVTI 테스트</title>
+    <title>PVTI 테스트</title>
 
     <!-- 시작/질문 배경 이미지 프리로드 -->
     <link
